@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.583 2006/01/23 01:26:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.584 2006/01/27 02:19:33 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  26 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  fix handling of 404 for real files
+  src/net/server/GLIServerProfile.py:
+  look for 'hostname' in attributes instead of 'name'
 
   22 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/SimpleXMLParser.py:
